app/assets/stylesheets/Index/MainIndex.scss
$LeftSideBar: 640px;
$BorderColor: #E6E6E6;
$InBetweenSearchIndexGrey: #F5F5F5;
.map{
    width:300px;
    height: 345px;
}
.IndexPage--MainContainer{
  display:grid;
  height:100%;
  width:100%;
  grid-template-areas: "top top"
                        "left right";

  grid-template-columns: $LeftSideBar 1fr;
  grid-template-rows: 150px 6fr;
}
.Index--Page__Top{
    height: 100%;
    background: red;
    grid-area: top;
}

.IndexPage--Top__Sides{
    height:  150px;
    width: 9999px;
    border-bottom: 1px $BorderColor solid;
    border-top: 1px $BorderColor solid;
    
    position: absolute;
    background: $InBetweenSearchIndexGrey;
    left:-999px;
    z-index: 90;

}

.Index--Page__Left{
    grid-area: left;
}
.Index--Page__Right{
    grid-area: right;

}
.Index--Page__Map{
    margin-top: 30px;

}
.IndexPage--Top__Bar{
    width: 50px;
    height: 3px;
    background: $BorderColor;
}
.IndexPage--Top__Padding{
    width: 100%;
    height: 55px;
    display: flex;
    align-items: center;
    justify-content: center;
}

.Index--Page__TopText{
    margin-top: 300px;
    font-weight: bold;
    font-size: 16px;
}

